--- a/homepageflex.css
+++ b/homepageflex.css
@@ -45,6 +45,9 @@
 margin-bottom: 10px;}
 
 
+.nm > a{color: white;}
+a:hover{background-color: none;}
+
 .TopAction  {font-family: sans-serif;color: white;font-size: 32px;padding-left: 56%;letter-spacing: 1px;}
 .TopAdventure  {font-family: sans-serif;color: white;font-size: 32px;padding-left: 55%;margin-top: 50px;letter-spacing: 1px;}
 .TopDrama  {font-family: sans-serif;color: white;font-size: 32px;padding-left: 57%;margin-top: 50px;letter-spacing: 1px;}
@@ -52,56 +55,80 @@ margin-bottom: 10px;}
 .action{display: flex;background-image: linear-gradient(to right,#1b9bff,#0082e6,#1b9bff);  overflow: scroll;overflow-y: hidden; border-radius: 3px;
         max-height: 540px;
         max-width:1135px;
-	      margin-left: 320px;margin-top: 7px;}
-.ActionMoviePoster{margin-left: 15px;margin-top: 25px;margin-right: 35px; color: white; font-family: sans-serif;text-align: center; }  
-/* custom scroll bar  */
-          /* width */
-.action::-webkit-scrollbar {
-  width: 7px;
-  overflow-x-width: 7px;
-  
-}
-
-/* Track */
-.action::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 3px grey; 
-  border-radius: 3px;
-}
- 
-/* Handle */
-.action::-webkit-scrollbar-thumb {
-  background: #2c3e50; 
-  border-radius: 3px;
-}
-
-/* Handle on hover */
-.action::-webkit-scrollbar-thumb:hover {
-  background: #2c3e50;
-}	
-.adventureMoviePoster{margin-left: 15px;margin-top: 25px;margin-right: 35px; color: white; font-family: sans-serif;text-align: center; }  
+	      margin-left: 320px;margin-top: 7px; overflow-x: hidden;}
+.ActionMoviePoster{margin-left: 20px;margin-top: 25px;margin-right: 75px; margin-bottom: 15px; color: white; font-family: sans-serif;text-align: center; overflow-x: }  
+/*insert scroll bar here*/
+.adventureMoviePoster{margin-left: 20px;margin-top: 25px;margin-right: 75px; margin-bottom: 10px; color: white; font-family: sans-serif;text-align: center; }  
 .adventure{display: flex;background-image: linear-gradient(to right,#1b9bff,#0082e6,#1b9bff);  overflow: scroll;overflow-y: hidden; border-radius: 3px;
           max-height: 540px;max-width:1135px;
-	        margin-left: 15px;margin-left: 320px;}
- 
-/* custom scroll bar  */
-          /* width */
-.adventure::-webkit-scrollbar {
-  width: 7px;
+	        margin-left: 15px;margin-left: 320px; overflow-x: hidden;}
+ <style>
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+.mySlides {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin-left: 27%;
 }
 
-/* Track */
-.adventure::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 3px grey; 
-  border-radius: 10px;
-}
- 
-/* Handle */
-.adventure::-webkit-scrollbar-thumb {
-  background: #2c3e50; 
-  border-radius: 3px;
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  background-color: grey;
 }
 
-/* Handle on hover */
-.adventure::-webkit-scrollbar-thumb:hover {
-  background: #2c3e50; 
-}	
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+
+
+
+
+
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
+</style>
